# seeking_alpha

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-agents.txt  requirements-dev.txt  requirements-sentiment.txt  requirements.txt
.github/workflows/: ci.yml
docs/: CONTEXTO_OPERATIVO_LINUX_WSL.md  CONTEXTO_OPERATIVO_NASDAQ.md  NOTAS_AJUSTE_SPLITS_yfinance.md  PLAN_AI_ASIA.md  PLAN_BACKFILL_fix_splits.md  REPLICAR_EN_OTRO_EQUIPO.md
docs/plans/: 2026-06-20-sigterm-safe-resumable-backfill.md  2026-06-20-syndicated-headline-dedup.md
scripts/: smoke_subscription.py  verify_as_traded_unadjust.py
src/qtdata/: __init__.py  calendars.py  cli.py  config.py  fundamentals.py  (+5 more)
tests/: conftest.py  fake_anthropic.py  test_adjustments.py  test_agents_report.py  test_agents_schema.py  test_agents_screener.py  test_agents_sql_tool.py  test_agents_subscription.py  test_agents_verification.py  test_alpha_vantage_provider.py  test_anomalies.py  test_calendars.py  test_catalog.py  test_cli.py  test_cli_agent.py  test_cli_fundamentals.py  test_cli_news.py  test_cli_universe_refresh.py  test_config.py  test_curate.py  test_end_to_end.py  test_fundamentals.py  test_graceful_shutdown.py  test_ingest.py  test_ingest_batch.py  test_nasdaq_directory.py  test_news_aggregate.py  test_news_curate.py  test_news_dedup.py  test_news_ingest.py  test_other_directory.py  test_parquet_store.py  test_reconcile.py  test_research_aiasia.py  test_research_event_study.py  test_research_ic.py  test_research_report.py  test_research_returns.py  test_schemas.py  test_universe.py  (+2 more)
(+44 files in other folders)
